Fixed default figure margin, so images look bigger on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@ td {
   text-overflow: ellipsis;
 }
 
+figure {
+  margin: 0;
+}
+
 button {
   margin: 0;
   height: 2rem;
